# serializer version: 1
# name: test_entity_registry[button.fire_bypass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.fire_bypass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bypass',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bypass',
    'unique_id': '123456_2_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.fire_bypass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Fire Bypass',
    }),
    'context': <ANY>,
    'entity_id': 'button.fire_bypass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entity_registry[button.gas_bypass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.gas_bypass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bypass',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bypass',
    'unique_id': '123456_3_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.gas_bypass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gas Bypass',
    }),
    'context': <ANY>,
    'entity_id': 'button.gas_bypass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entity_registry[button.motion_bypass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.motion_bypass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bypass',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bypass',
    'unique_id': '123456_4_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.motion_bypass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Motion Bypass',
    }),
    'context': <ANY>,
    'entity_id': 'button.motion_bypass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entity_registry[button.security_bypass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.security_bypass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bypass',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bypass',
    'unique_id': '123456_1_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.security_bypass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Security Bypass',
    }),
    'context': <ANY>,
    'entity_id': 'button.security_bypass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entity_registry[button.test_bypass_all-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_bypass_all',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bypass all',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bypass_all',
    'unique_id': '123456_bypass_all',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.test_bypass_all-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test Bypass all',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_bypass_all',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entity_registry[button.test_clear_bypass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_clear_bypass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Clear bypass',
    'platform': 'totalconnect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'clear_bypass',
    'unique_id': '123456_clear_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[button.test_clear_bypass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test Clear bypass',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_clear_bypass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
